[feat] : Adicionei Cache em métodos UserServiceImpl